# EMsoft

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Dockerfile  EMSoftSDK_Installation.md  EMsoftDockerConfig.template  FilePathConventions.md  License.txt  ReadMe.md  ccmake-options.md  project-file.md
DOxygen/: Doxyfile
Source/EMOpenCLLib/: CLsupport.f90  CMakeLists.txt  DIwrappers.h  Indexingmod.f90
Source/EMOpenCLLib/cmake/: EMsoftConfig.cmake
Source/EMSphInx/EMsoftSphInxLib/: CMakeLists.txt
Source/EMSphInx/EMsoftSphInxLib/cmake/: EMsoftConfig.cmake
Source/EMSphInx/EMsoftSphInxLib/sht/: Wigner.f90
Source/EMsoftHDFLib/: CMakeLists.txt  EBSDDImod.f90  EBSDdefectHDFmod.f90  EBSDiomod.f90  EBSDmod.f90  ECPiomod.f90  ECPmod.f90  EMdymodHDF.f90  EMh5ebsd.f90  FitOrientations.f90  Grid_Interpolation.f90  HDFsupport.f90  HDFsupport.f90.save  InitializersQCHDF.f90  Lauemod.f90  MDsubroutines.f90  NameListHDFwriters.f90  PFInversionHDF.f90  PSOmod.f90  QCmodHDF.f90  TKDDImod.f90  TKDmod.f90  commonmod.f90  hhHDFmod.f90  initializersHDF.f90  patternmod.f90  utilities.f90
Source/EMsoftLib/: CLsupport.f90  CMakeLists.txt  DSHT.f90  EBSDdefectmod.f90  ECCImod.f90  EMdymod.f90  EMsoftLib.h  EMsoftStringConstants.h.in  GBmod.f90  ISEmod.f90  Indexingmod.f90  JSONsupport.f90  Lambert.f90  Laue.f90  MBmodule.f90  MBmoduleQC.f90  MRCmod.f90  MuellerCalculus.f90  NameListHandlers.f90  NameListTypedefs.f90  PEDmod.f90  PFInversion.f90  PFInversionCwrapper.c  PFInversionCwrapper.h  PFInversionmod.f90  PSOmod.f90  QCmod.f90  ReadMe.md  SHCorrelator.f90  STEMmodule.f90  SingleEBSDPattern.cpp  StringConstants.cmake  Wigner.f90  Ylm.f90  apb.f90  bclsf90wrapper.c  bmp.f90  bobyqa.f90  bobyqa_refinement.f90  configmod.f90  (+67 more)
Source/EMsoftLib/cmake/: EMsoftConfig.cmake
Source/EMsoftWorkbench/: CMakeLists.txt  README.md  SourceList.cmake
Source/EMsoftWorkbench/Documentation/: README.md
Source/EMsoftWorkbench/H5Support/: CMakeLists.txt  H5ScopedSentinel.cpp  H5ScopedSentinel.h  H5SupportConfiguration.h.in  H5Utilities.h  HDF5ScopedFileSentinel.cpp  HDF5ScopedFileSentinel.h  QH5Lite.cpp  QH5Utilities.cpp  QH5Utilities.h
Source/EMsoftWorkbench/H5Support/Test/: BigHDF5DatasetTest.cpp  CMakeLists.txt  H5LiteTest.cpp  H5SupportTestMain.cpp.in  H5UtilitiesTest.cpp
Source/EMsoftWorkbench/OrientationLib/: CMakeLists.txt
Source/EMsoftWorkbench/Resources/: BrandedStrings.h
Source/EMsoftWorkbench/SIMPLib/: CMakeLists.txt  SIMPLibConfiguration.h.in  SIMPLibMacros.cmake
Source/EMsoftWorkbench/Workbench/: CMakeLists.txt  EMsoftApplication.cpp  EMsoftWorkbench.h.in  EMsoftWorkbench_UI.cpp  EMsoftWorkbench_UI.h  SVStyle.cpp  SVStyle.h  StatusBarWidget.cpp  StyleSheetEditor.cpp  StyleSheetEditor.h  main.cpp
Source/EMsoftWrapperLib/: CMakeLists.txt
Source/EMsoftWrapperLib/DictionaryIndexing/: EMDIwrappermod.f90  EMsoftDIwrappers.h  EMsoftDIwrappersCallbacks.c  EMsoftDIwrappersCallbacks.h  PyEMEBSDDI.cpp  PyUtils.cpp  PyUtils.hpp  README.md  Readme.md  SourceList.cmake  SourceList.temp
Source/EMsoftWrapperLib/EEC/: SourceList.cmake
Source/EMsoftWrapperLib/GBs/: SourceList.cmake
Source/EMsoftWrapperLib/OLIO/: SourceList.cmake
Source/EMsoftWrapperLib/OM/: SourceList.cmake
Source/EMsoftWrapperLib/QC/: SourceList.cmake
Source/EMsoftWrapperLib/SEM/: EMSEMwrappermod.f90  EMsoftSEMwrappers.h  SourceList.cmake
Source/EMsoftWrapperLib/SphInx/: SourceList.cmake
Source/EMsoftWrapperLib/TEM/: SourceList.cmake
Source/EMsoftWrapperLib/Utilities/: SourceList.cmake
Source/EMsoftWrapperLib/XRay/: SourceList.cmake
Source/EMsoftWrapperLib/cmake/: EMsoftWrapperConfig.cmake
Source/EMsoftWrapperLib/pyEMsoft/: SourceList.cmake
Source/QtSupport/: CMakeLists.txt  QtSFileCompleter.h  QtSFileUtils.cpp  QtSFileUtils.h  QtSLineEdit.h  QtSRecentFileList.cpp  QtSRecentFileList.h  QtSSettings.h  QtSStringEdit.cpp  QtSStringEdit.h
Source/Test/: CMakeLists.txt  DIWorkflowTestPrep.cpp  HDFcharTest.f90  HDFdoubleTest.f90  HDFfloatTest.f90  HDFhyperslabTest.f90  HDFintegerTest.f90  HDFstackTest.f90  HDFsupportTest.f90  HDFtest_textfile.f90  HDFtextfileTest.f90  ImageTest.f90  MODMuellerCalculusTest.f90  MODRotationsTest.f90  MODcrystalTest.f90  NORDIFTest.f90  NameListHDFwritersTest.f90  TestFileLocations.f90.in  TestFileLocations.in.h  UnitTestMain.cpp.in  UnitTestSupport.hpp
Source/Test/NmlTemplates/: EMEBSDDIpreview.nml.in  EMEBSDmaster.nml.in  EMMCOpenCL.nml.in  EMgetADP.nml.in
doc/: index.html  (+3 more)
manuals/: CMakeLists.txt  CTEMdefect.tex  DREAM3D+EMsoft.fdb_latexmk  DREAM3D+EMsoft.fls  DREAM3D+EMsoft.tex  EMEBSD.aux  EMEBSD.blg  EMEBSD.fdb_latexmk  EMEBSD.fls  EMEBSD.out  EMEBSD.run.xml  EMEBSD.tex  EMEBSD.toc  EMIndexing.aux  EMIndexing.bbl  EMIndexing.blg  EMIndexing.fdb_latexmk  EMIndexing.fls  EMIndexing.out  EMIndexing.tex  EMIndexing.toc  EMsoft.aux  EMsoft.blg  EMsoft.fdb_latexmk  EMsoft.fls  EMsoft.md  EMsoft.out  EMsoft.run.xml  EMsoft.tex  EMsoft.toc  EMsoftNotifications.aux  EMsoftNotifications.blg  EMsoftNotifications.fdb_latexmk  EMsoftNotifications.fls  EMsoftNotifications.out  EMsoftNotifications.run.xml  EMsoftNotifications.tex  EMsoftNotifications.toc  Fedora26_install_notes.html  Fedora26_install_notes.md  (+10 more)
manuals/examples/: SourceList.cmake
manuals/examples/EBSDPatterns/: BetheParameters.nml  EMEBSDMexample.nml  EMEBSDexample.nml  EMMCexample.nml  SourceList.cmake
manuals/examples/KosselPatterns/: Ex5.nml  SourceList.cmake
manuals/figs/: CBEDwidget1.eps  CBEDwidget2.eps  CBEDwidget3.eps  CTEMlogo.eps  EBSDEBSP2.eps  EBSDdetector.eps  EBSDdetector2.eps  EBSDmain.eps  ECCISF.eps  ECCIdislo.eps  ECCIwidget3.eps  ECPwidget1.eps  ECPwidget2.eps  EMsoftlogo.eps  HDFView.eps  HDFView2.eps  KosselExample.eps  Kosselwidget1.eps  Laue-hemispheres.eps  PGFZs.eps  SEMONRlogo.eps  SEMdisplayMain.tiff  SEMlogo.eps  STEMwidget1.eps  STEMwidget2.eps  STEMwidget3.eps  STEMwidget4.eps  XtalFile.eps  ZAimref.eps  bary.eps  dp1.eps  ex1.eps  ex2.eps  ex3.eps  ex4.eps  ex5.eps  example61.eps  example61b.eps  geometry.eps  hextest.eps  (+2 more)
manuals/includefiles/: EMDPFit.template  EMEBSDDI.template
(+1643 files in other folders)
